--- a/package.json
+++ b/package.json
@@ -10,32 +10,34 @@
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.3",
-    "@chakra-ui/react": "^1.8.6",
+    "@chakra-ui/react": "^2.2.4",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@mapbox/rehype-prism": "^0.8.0",
     "@mdx-js/loader": "^2.0.0",
     "@next/mdx": "^12.1.0",
+    "@types/react-dom": "^18.0.6",
+    "@types/react-pdf": "^5.7.2",
     "esbuild": "^0.14.24",
     "framer-motion": "^6",
     "gray-matter": "^4.0.3",
-    "mdx-bundler": "^8.0.1",
-    "next": "12.1.0",
+    "mdx-bundler": "^9.0.1",
+    "next": "12.2.2",
     "next-themes": "^0.2.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-icons": "^4.3.1",
     "react-pdf": "^5.7.1",
     "rehype-katex": "^6.0.2",
     "rehype-mathjax": "^4.0.2",
-    "rehype-prism": "^1.0.0",
+    "rehype-prism": "^2.1.3",
     "remark-math": "^5.1.1"
   },
   "devDependencies": {
-    "@types/node": "17.0.21",
-    "@types/react": "17.0.39",
-    "eslint": "8.9.0",
-    "eslint-config-next": "12.1.0",
-    "typescript": "4.5.5"
+    "@types/node": "18.0.3",
+    "@types/react": "^18.0.15",
+    "eslint": "8.19.0",
+    "eslint-config-next": "12.2.2",
+    "typescript": "4.7.4"
   }
 }
