--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/core": "^7.18.6",
     "@chakra-ui/icons": "^2.0.3",
     "@chakra-ui/react": "^2.2.4",
+    "@chakra-ui/system": "^2.2.2",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@mapbox/rehype-prism": "^0.8.0",
     "@mdx-js/loader": "^2.0.0",
+    "@mdx-js/react": "^2.1.2",
     "@next/mdx": "^12.1.0",
     "@types/react-dom": "^18.0.6",
     "@types/react-pdf": "^5.7.2",
@@ -31,7 +34,9 @@
     "rehype-katex": "^6.0.2",
     "rehype-mathjax": "^4.0.2",
     "rehype-prism": "^2.1.3",
-    "remark-math": "^5.1.1"
+    "remark-math": "^5.1.1",
+    "unified": "^10.1.2",
+    "webpack": "^5.73.0"
   },
   "devDependencies": {
     "@types/node": "18.0.3",
