--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@chakra-ui/system": "^2.2.2",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@fontsource/merriweather": "^4.5.12",
     "@mapbox/rehype-prism": "^0.8.0",
     "@mdx-js/loader": "^2.0.0",
     "@mdx-js/react": "^2.1.2",
@@ -35,6 +36,7 @@
     "rehype-mathjax": "^4.0.2",
     "rehype-prism": "^2.1.3",
     "remark-math": "^5.1.1",
+    "typewriter-effect": "^2.19.0",
     "unified": "^10.1.2",
     "webpack": "^5.73.0"
   },
