--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.3.1",
+    "react-responsive": "^9.0.0",
     "rehype-katex": "^6.0.2",
     "rehype-mathjax": "^4.0.2",
     "rehype-prism": "^2.1.3",
