--- a/package.json
+++ b/package.json
@@ -15,7 +15,15 @@
     "@chakra-ui/system": "^2.2.2",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@fontsource/atkinson-hyperlegible": "^5.0.17",
+    "@fontsource/fira-sans": "^5.0.14",
+    "@fontsource/fira-sans-extra-condensed": "^5.0.8",
+    "@fontsource/inter": "^5.0.12",
     "@fontsource/montserrat": "^4.5.12",
+    "@fontsource/oxygen": "^5.0.8",
+    "@fontsource/poppins": "^5.0.8",
+    "@fontsource/proza-libre": "^5.0.8",
+    "@fontsource/vollkorn-sc": "^5.0.8",
     "@mapbox/rehype-prism": "^0.8.0",
     "@mdx-js/loader": "^2.0.0",
     "@mdx-js/react": "^2.1.2",
@@ -25,15 +33,17 @@
     "framer-motion": "^6",
     "gray-matter": "^4.0.3",
     "mdx-bundler": "^9.0.1",
-    "next": "12.2.2",
+    "next": "^13.5.4",
     "next-themes": "^0.2.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
     "react-responsive": "^9.0.0",
     "rehype-katex": "^6.0.2",
     "rehype-mathjax": "^4.0.2",
     "rehype-prism": "^2.1.3",
+    "rehype-stringify": "^10.0.0",
+    "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
     "typewriter-effect": "^2.19.0",
     "unified": "^10.1.2",
@@ -43,7 +53,7 @@
     "@types/node": "18.0.3",
     "@types/react": "^18.0.15",
     "eslint": "8.19.0",
-    "eslint-config-next": "12.2.2",
+    "eslint-config-next": "^13.5.4",
     "typescript": "4.7.4"
   }
 }
